syntax = "proto3";

option go_package = ".;proto";

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string fullName = 1;
}

service HelloService{
  rpc Hello(HelloRequest)returns(HelloResponse);
}
